--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
 * {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  
 }
 
 html {
-    background-color: #374359;
+  background-color: #374359;
 }
 
 .container {
@@ -15,15 +15,16 @@ html {
 }
 
 header {
-  height: 720px;
+  width: 100%;
+  height: 810px;
   margin-top: 0;
 }
 
 #header-box {
-  background-image: linear-gradient(#434343, #374359);
+  background-image: linear-gradient(#434343, #374359, #434343);
   opacity: 0.5;
   width: 30%;
-  height: 720px;
+  height: 790px;
   margin: 0;
   padding: 20px;
   position: absolute;
@@ -136,30 +137,40 @@ figcaption {
 }
 
 #middle-container {
-  margin-top: 50px;
+  margin-top: 150px;
 }
 
 article {
-  width: 90%;
+  width: 100%;
   max-width: 1100px;
   display: block;
   margin: auto;
 }
 
 #text-box {
-  width: 50%;
-  height: 650px;
+  width: 575px;
+  height: 700px;
   background-color: #434343;
-  margin: 0 20px 0 0;
-  padding: 20px;
+  margin-right: 50px;
   display: inline-block;
+  vertical-align: top;
+}
+
+#text-box h2 {
+  margin: 15px 30px 0 20px;
+}
+
+#text-box p {
+  margin: 0px 30px;
 }
 
 #figure-middle {
   width: 450px;
+  height: 700px;
   display: inline-block;
   margin-top: 0;
   background-color: #EDE600;
+  vertical-align: top;
 }
 
 #middle-photo {
@@ -176,12 +187,12 @@ article {
 
 #grid-container {
   width: 100%;
-  height: 500px;
+  height: 600px;
   grid-column-gap: 20px;
   overflow-y: scroll;
   display: inline-grid;
-  background-image: linear-gradient(#434343, #374359);
-  margin-top: 50px;
+  background-image: linear-gradient(#434343, #374359, #434343);
+  margin-top: 150px;
 }
 
 .row {
@@ -218,8 +229,21 @@ article {
 
 footer {
   width: 100%;
-  height: 300px;
+  height: 325px;
   background-color: #EDE600;
-  margin-top: 50px;
-  padding: 50px;
+  margin-top: 150px;
+  padding-top: 50px;
+  padding-bottom: 30px;
+}
+
+#link-container {
+  width: 90%;
+  margin: auto;
+}
+
+#copyright {
+  text-align: center;
+  font-style: italic;
+  width: 90%;
+  margin: 160px auto 0 auto;
 }
