--- a/style.css
+++ b/style.css
@@ -21,10 +21,9 @@ header {
 }
 
 #header-box {
-  background-image: linear-gradient(#434343, #374359, #434343);
-  opacity: 0.5;
+  background-image: linear-gradient( to right, #434343, transparent 90%);
   width: 30%;
-  height: 790px;
+  height: 770px;
   margin: 0;
   padding: 20px;
   position: absolute;
@@ -50,9 +49,9 @@ nav {
   top: 0;
   right: 0;
   margin-top: 20px;
-  background-color: rgba(67,67,67,0.6);
-  text-align: justify;
-  padding: 5px;
+  background-image: linear-gradient( to left, #434343, transparent 90%);
+  text-align: right;
+  padding: 5px 20px;
 }
 
 li {
@@ -61,7 +60,7 @@ li {
 
 .nav-item{
   display: inline-block;
-  margin-left: 20px;
+  margin-left: 25px;
   font-weight: 700;
   text-decoration: none;
 }
@@ -90,14 +89,14 @@ h3 {
   text-align: center;
   font-family: 'Bowlby One SC', serif;
   font-size: 2.618em;
-  line-height: 2em;
+  line-height: 1.2em;
   letter-spacing: 1px;
 }
 
 #link {
   font-family: 'Montserrat', sans-serif;
   font-size: 2.618em;
-  line-height: 1em;
+  line-height: 1.5em;
   letter-spacing: 1px;
   text-decoration: none;
   text-align: center;
@@ -122,13 +121,18 @@ p, figcaption, li a{
   color: #fff;
 }
 
+#fund-link {
+  text-decoration: none;
+  color: #EDE600;
+  font-weight: 700;
+}
+
 figure {
   width: 100%;
   height: auto;
 }
 
 figcaption {
-  background-color: rgba(0,0,0,0.75);
   width: 88%;
   height: auto;
   background-color: #434343;
@@ -143,8 +147,11 @@ figcaption {
 article {
   width: 100%;
   max-width: 1100px;
+  height: 720px;
+  padding: 50px;
   display: block;
   margin: auto;
+  background-color: #434343;
 }
 
 #text-box {
@@ -187,14 +194,20 @@ article {
 
 #grid-container {
   width: 100%;
-  height: 600px;
+  height: 750px;
   grid-column-gap: 20px;
   overflow-y: scroll;
   display: inline-grid;
   background-image: linear-gradient(#434343, #374359, #434343);
   margin-top: 150px;
+  border-top: 3px solid #EDE600;
+  border-bottom: 3px solid #EDE600;
 }
 
+#image-head {
+  text-align: center;
+  margin: 10px auto;
+}
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -229,16 +242,27 @@ article {
 
 footer {
   width: 100%;
-  height: 325px;
+  height: 350px;
   background-color: #EDE600;
   margin-top: 150px;
   padding-top: 50px;
   padding-bottom: 30px;
 }
 
+#youtube-container {
+  margin: 20px auto;
+  width: 85%;
+}
+
+iframe {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 #link-container {
-  width: 90%;
-  margin: auto;
+  width: 50%;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 #copyright {
